# libhal-micromod

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: 1.0.0.yml  ci.yml  deploy.yml  deploy_all.yml  deploy_version.yml
conan/profiles/v1/: mod-lpc40-v5  mod-stm32f1-v4  mod-stm32f1-v5
demos/: CMakeLists.txt  conanfile.py  main.cpp
demos/applications/: blinker.cpp  can_sniffer.cpp  console_loopback.cpp  hello_world.cpp  i2c.cpp  terminate.cpp
include/libhal-micromod/: micromod.hpp
src/: lpc4078.cpp  micromod.cpp  mod-lpc40-v5.cpp  mod-stm32f1-v4.cpp  mod-stm32f1-v5.cpp  stm32f103c8.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  main.test.cpp  micromod.test.cpp
